Adding unit tests for FixCreatures. Updating mockito.